--- a/kidz tution tracker/Base.lproj/Tuitions.storyboard
+++ b/kidz tution tracker/Base.lproj/Tuitions.storyboard
@@ -2,9 +2,10 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="rws-2s-1jK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Tutions List View Controller-->
+        <!--Tuitions-->
         <scene sceneID="dgj-Tn-9QT">
             <objects>
                 <viewController id="AUO-A1-Apg" customClass="TutionsListViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,19 +17,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Tlb-xm-dKl">
-                                <rect key="frame" x="27" y="80" width="545" height="471"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1R7-r3-XyY">
+                                <rect key="frame" x="42" y="93" width="556" height="487"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="78" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EdV-Gj-zWN">
-                                        <rect key="frame" x="8" y="24" width="516" height="414"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="78" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="EdV-Gj-zWN">
+                                        <rect key="frame" x="0.0" y="0.0" width="556" height="487"/>
                                         <animations/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TuitionsTableViewCell" rowHeight="78" id="krY-jg-Idq" customClass="TuitionsTableViewCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="28" width="516" height="78"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" showsReorderControl="YES" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TuitionsTableViewCell" rowHeight="78" id="krY-jg-Idq" customClass="TuitionsTableViewCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="92" width="556" height="78"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="krY-jg-Idq" id="K5V-G1-8Ql">
-                                                    <rect key="frame" x="0.0" y="0.0" width="516" height="77.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="523" height="77.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hp6-Ff-zo7">
@@ -42,27 +43,40 @@
                                                     <animations/>
                                                 </tableViewCellContentView>
                                                 <animations/>
+                                                <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                 <connections>
                                                     <outlet property="tuitionNameLabel" destination="Hp6-Ff-zo7" id="uU4-wh-iCk"/>
+                                                    <segue destination="HSb-ow-ezl" kind="showDetail" identifier="SegueEditTuitions" id="0Yx-Q0-frx"/>
                                                 </connections>
                                             </tableViewCell>
                                         </prototypes>
                                         <connections>
-                                            <outlet property="dataSource" destination="AUO-A1-Apg" id="YaI-UK-qM0"/>
-                                            <outlet property="delegate" destination="AUO-A1-Apg" id="1w4-lb-g0v"/>
+                                            <outlet property="dataSource" destination="AUO-A1-Apg" id="JHh-Lt-rDb"/>
+                                            <outlet property="delegate" destination="AUO-A1-Apg" id="YsC-vg-vXc"/>
                                         </connections>
                                     </tableView>
                                 </subviews>
                                 <animations/>
-                            </scrollView>
+                            </stackView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="trailing" secondItem="LEr-1F-uaH" secondAttribute="trailingMargin" id="1YL-UM-Jmv"/>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="leading" secondItem="LEr-1F-uaH" secondAttribute="leading" constant="42" id="2la-X0-5yV"/>
+                            <constraint firstAttribute="bottom" secondItem="1R7-r3-XyY" secondAttribute="bottom" constant="20" id="CU1-Lg-be1"/>
+                            <constraint firstAttribute="trailing" secondItem="1R7-r3-XyY" secondAttribute="trailing" constant="2" id="KOu-jt-HvZ"/>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="leading" secondItem="LEr-1F-uaH" secondAttribute="leadingMargin" id="MRG-86-wXO"/>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="top" secondItem="3IQ-eI-if4" secondAttribute="bottom" id="NQw-Mo-J9u"/>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="top" secondItem="3IQ-eI-if4" secondAttribute="bottom" id="e8X-aI-ZLt"/>
+                            <constraint firstItem="1R7-r3-XyY" firstAttribute="top" secondItem="3IQ-eI-if4" secondAttribute="bottom" constant="29" id="hCI-J2-Pc6"/>
+                            <constraint firstItem="kY7-8P-enX" firstAttribute="top" secondItem="1R7-r3-XyY" secondAttribute="bottom" id="kyY-h7-K5a"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="dUT-Hh-Wzf">
+                    <navigationItem key="navigationItem" title="Tuitions" id="dUT-Hh-Wzf">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="iX9-sH-7NO">
                             <connections>
-                                <segue destination="UjF-rF-7qs" kind="presentation" identifier="SegueAddTuitionsViewController" id="A1q-dP-Ebz"/>
+                                <segue destination="UjF-rF-7qs" kind="presentation" identifier="segueAddTutions" id="A1q-dP-Ebz"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -77,7 +91,7 @@
         <!--Add Tuition-->
         <scene sceneID="mZf-a8-Myo">
             <objects>
-                <viewController id="VF8-P3-MuY" customClass="TuitionsViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="VF8-P3-MuY" customClass="TuitionsAddViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2cz-0f-4zA"/>
                         <viewControllerLayoutGuide type="bottom" id="dYk-1d-UOe"/>
@@ -99,6 +113,10 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5aW-R2-7Mt">
+                                <rect key="frame" x="142" y="164" width="355" height="216"/>
+                                <animations/>
+                            </pickerView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -164,6 +182,76 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3NM-tf-kg4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1821" y="1007"/>
+        </scene>
+        <!--Update Tuitions-->
+        <scene sceneID="pgF-O8-qxB">
+            <objects>
+                <viewController id="MQZ-Qy-N33" customClass="TuitionsEditViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YrA-KY-byx"/>
+                        <viewControllerLayoutGuide type="bottom" id="8mm-NZ-Aqk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IKv-t3-60x">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JLg-tw-6au">
+                                <rect key="frame" x="39" y="87" width="64" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q4f-LX-lmm">
+                                <rect key="frame" x="321" y="87" width="187" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Update Tuitions" id="RSS-Tb-Nry">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="O36-YV-M22">
+                            <connections>
+                                <action selector="cancelAction:" destination="MQZ-Qy-N33" id="1yy-Qb-jUz"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="3lk-V8-np6">
+                            <connections>
+                                <action selector="saveAction:" destination="MQZ-Qy-N33" id="Wf8-YY-UHq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="txtTution" destination="Q4f-LX-lmm" id="ysj-cB-dUK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pWd-GK-R3x" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2638" y="1716"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="74V-Je-5DX">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mte-DI-NuP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HSb-ow-ezl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="d7Q-R9-x0F">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="MQZ-Qy-N33" kind="relationship" relationship="rootViewController" id="dwI-21-g0N"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1826" y="1716"/>
         </scene>
     </scenes>
 </document>
