--- a/kidz tution tracker/Base.lproj/Main.storyboard
+++ b/kidz tution tracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
@@ -16,16 +16,16 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
+                        <segue destination="yNN-qn-2Q1" kind="relationship" relationship="viewControllers" id="86h-Mc-Zef"/>
                         <segue destination="k0n-MY-qWb" kind="relationship" relationship="viewControllers" id="wVH-3d-GnB"/>
                         <segue destination="0g5-hS-sZP" kind="relationship" relationship="viewControllers" id="e33-jt-Snr"/>
-                        <segue destination="yNN-qn-2Q1" kind="relationship" relationship="viewControllers" id="86h-Mc-Zef"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="23" y="-85"/>
         </scene>
-        <!--Tutions-->
+        <!--Tuitions-->
         <scene sceneID="Wdm-0e-Ov0">
             <objects>
                 <viewControllerPlaceholder storyboardName="Tuitions" id="yNN-qn-2Q1" sceneMemberID="viewController">
