--- a/kidz tution tracker/Attendance.storyboard
+++ b/kidz tution tracker/Attendance.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bAI-zU-INE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="bAI-zU-INE">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,40 +18,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YM2-g9-Ul7">
-                                <rect key="frame" x="20" y="64" width="560" height="388"/>
+                                <rect key="frame" x="20" y="64" width="560" height="487"/>
                                 <subviews>
                                     <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8gN-Ip-A97">
-                                        <rect key="frame" x="0.0" y="0.0" width="560" height="388"/>
-                                        <animations/>
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="487"/>
                                     </containerView>
                                 </subviews>
-                                <animations/>
+                                <constraints>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="leading" secondItem="YM2-g9-Ul7" secondAttribute="leading" id="1vx-99-Die"/>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="trailing" secondItem="YM2-g9-Ul7" secondAttribute="trailingMargin" id="6yj-T9-Zta"/>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="bottom" secondItem="YM2-g9-Ul7" secondAttribute="bottomMargin" id="7IZ-B2-56y"/>
+                                    <constraint firstAttribute="trailing" secondItem="8gN-Ip-A97" secondAttribute="trailing" id="HNY-0I-F9V"/>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="top" secondItem="YM2-g9-Ul7" secondAttribute="top" id="gCt-lJ-I2x"/>
+                                    <constraint firstAttribute="bottom" secondItem="8gN-Ip-A97" secondAttribute="bottom" id="hni-S2-Umg"/>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="top" secondItem="YM2-g9-Ul7" secondAttribute="topMargin" id="miD-NY-GoR"/>
+                                    <constraint firstItem="8gN-Ip-A97" firstAttribute="leading" secondItem="YM2-g9-Ul7" secondAttribute="leadingMargin" id="oGM-JL-JpP"/>
+                                </constraints>
                             </stackView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="YM2-g9-Ul7" secondAttribute="bottom" id="Mda-1z-W6P"/>
-                            <constraint firstItem="YM2-g9-Ul7" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="WBR-5K-3tX"/>
-                            <constraint firstItem="YM2-g9-Ul7" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="haK-6O-Ey1"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="YM2-g9-Ul7" secondAttribute="bottom" constant="99" id="pC7-Nq-lJ0"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="YM2-g9-Ul7" secondAttribute="trailing" id="yRr-zh-bTZ"/>
+                            <constraint firstItem="YM2-g9-Ul7" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="2VM-du-T9n"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="YM2-g9-Ul7" secondAttribute="bottom" id="d6a-25-Slr"/>
+                            <constraint firstItem="YM2-g9-Ul7" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" id="fgn-dZ-FLb"/>
+                            <constraint firstItem="YM2-g9-Ul7" firstAttribute="trailing" secondItem="tsR-hK-woN" secondAttribute="trailingMargin" id="ier-g8-ZXv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OMP-fD-83I">
                         <nil key="title"/>
-                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="noh-ks-CEa">
-                            <rect key="frame" x="180" y="7" width="240" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                            <segments>
-                                <segment title="First"/>
-                                <segment title="Second"/>
-                            </segments>
-                            <connections>
-                                <action selector="showComponent:" destination="9pv-A4-QxB" eventType="valueChanged" id="NKn-n0-zZC"/>
-                            </connections>
-                        </segmentedControl>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="EGb-0Q-CW9">
+                            <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="noh-ks-CEa">
+                                <rect key="frame" x="340" y="7" width="240" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                                <connections>
+                                    <action selector="showComponent:" destination="9pv-A4-QxB" eventType="valueChanged" id="NKn-n0-zZC"/>
+                                </connections>
+                            </segmentedControl>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="containerView" destination="8gN-Ip-A97" id="ArW-7j-5bV"/>
@@ -61,26 +68,41 @@
             </objects>
             <point key="canvasLocation" x="1756" y="-376"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Pending Attendance Table View Controller-->
         <scene sceneID="mcm-D1-htJ">
             <objects>
-                <tableViewController storyboardIdentifier="pendingAttendance" id="agd-un-uL5" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="0PP-IN-qTk">
+                <tableViewController storyboardIdentifier="pendingAttendance" id="agd-un-uL5" customClass="PendingAttendanceTableViewController" customModule="kidz_tuition_tracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="71" sectionHeaderHeight="28" sectionFooterHeight="28" id="0PP-IN-qTk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="ddl-f7-Vsp">
-                                <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="pendingAttendanceTableViewCell" rowHeight="71" id="ddl-f7-Vsp" customClass="PendingAttendanceCell" customModule="kidz_tuition_tracker" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="600" height="71"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ddl-f7-Vsp" id="ei4-1S-nEt">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="70.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <animations/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xj8-1o-iIQ">
+                                            <rect key="frame" x="8" y="32" width="257" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RNe-yH-81M">
+                                            <rect key="frame" x="332" y="20" width="51" height="31"/>
+                                            <connections>
+                                                <action selector="statusChanged:" destination="ddl-f7-Vsp" eventType="valueChanged" id="07o-vx-Led"/>
+                                            </connections>
+                                        </switch>
+                                    </subviews>
                                 </tableViewCellContentView>
-                                <animations/>
                                 <color key="backgroundColor" red="1" green="0.081942766769999995" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="attendanceSwitch" destination="RNe-yH-81M" id="dEx-iP-JJh"/>
+                                    <outlet property="dayLabel" destination="Xj8-1o-iIQ" id="6AI-Ee-kgM"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -102,7 +124,6 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="dLN-rL-TpM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ODW-1l-JTR">
@@ -111,9 +132,7 @@
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ODW-1l-JTR" id="zKr-Lu-Jld">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
-                                    <animations/>
                                 </tableViewCellContentView>
-                                <animations/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -138,7 +157,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="IV0-Zf-rPX">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
